--- a/public/index.css
+++ b/public/index.css
@@ -1,3 +1,32 @@
+/* importing uidesign lib */
+@import url("https://deploy-preview-1--roshanuidesign.netlify.app/main.css");
+
+/* -font-montserrat- */
+@import url("https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;1,100;1,200;1,300;1,400;1,500&display=swap");
+
 body {
-    margin: 0;
+  margin: 0;
+  font-family: "Montserrat", sans-serif;
+  background: var(--third);
+}
+html {
+  scroll-behavior: smooth;
+}
+:root {
+  --e-secondary: #0e55ff;
+  --e-primary: #ffb80e;
+}
+.section-heading {
+  text-align: center;
+  font-size: 1.75rem;
+  font-weight: 500;
+  text-decoration: underline;
+}
+.modal {
+  position: absolute;
+  padding-left: 1rem;
+  top: 10vw;
+  right: 3vw;
+  transition: ease-in;
+  box-shadow: 2px 2px 2px 2px #0e56ff31;
 }
