refactor: box-shadow

--- a/public/index.css
+++ b/public/index.css
@@ -28,5 +28,5 @@ html {
   top: 10vw;
   right: 3vw;
   transition: ease-in;
-  box-shadow: 2px 2px 2px 2px #0e56ff31;
+  box-shadow: 2px 2px 2px #0e56ff31;
 }
