--- a/src/components/navbar.css
+++ b/src/components/navbar.css
@@ -3,8 +3,9 @@
   color: var(--e-secondary);
   font-weight: 500;
   margin-bottom: 0.25rem;
-  position: sticky;
+  position: fixed;
   top: 0;
+  width: 100%;
   z-index: 1;
   box-shadow: 5px 5px 0.5rem rgba(0, 0, 0, 0.137);
 }
