--- a/src/components/slideshow.css
+++ b/src/components/slideshow.css
@@ -1,5 +1,9 @@
 @import "react-slideshow-image/dist/styles.css";
 
+.slideshow {
+  margin-top: 4.5rem;
+  z-index: 1;
+}
 .each-slide > div {
   display: flex;
   align-items: center;
@@ -15,4 +19,9 @@
   background: rgba(255, 255, 255, 0.521);
   text-align: center;
   border-radius: 0.25rem;
+}
+@media screen and (max-width: 670px) {
+  .slideshow {
+    margin-top: 6.5rem;
+  }
 }
