--- a/src/components/productsection.css
+++ b/src/components/productsection.css
@@ -36,13 +36,16 @@
 .card {
   margin: 0.75rem 0.5rem;
   flex: 1 1 200px;
-  background: rgba(255, 255, 255, 0.39);
+  background: #fff;
 }
 .card-image {
-  height: 15rem;
-  padding: 0 2rem;
+  max-height: 16rem;
+  padding: 1rem;
 }
-
+.product-img {
+  width: 100%;
+  height: auto;
+}
 .card-image button {
   background: transparent;
   color: gray;
