--- a/public/index.css
+++ b/public/index.css
@@ -23,10 +23,11 @@ html {
   text-decoration: underline;
 }
 .modal {
-  position: absolute;
+  position: fixed;
   padding-left: 1rem;
   top: 10vw;
   right: 3vw;
   transition: ease-in;
   box-shadow: 2px 2px 2px #0e56ff31;
+  z-index: 1000;
 }
