--- a/src/components/productsection.css
+++ b/src/components/productsection.css
@@ -47,12 +47,12 @@
   height: auto;
 }
 .card-image button {
-  background: transparent;
+  background: rgba(255, 255, 255, 0.808);
   color: gray;
-  border: 0;
-  top: 0;
-  right: 0.1rem;
-  font-size: 1.5rem;
+  top: 0.5rem;
+  right: 0.5rem;
+  font-size: 1.25rem;
+  padding: 0 0.25rem;
 }
 .card .card-content {
   background: transparent;
