--- a/src/components/productsection.css
+++ b/src/components/productsection.css
@@ -37,32 +37,58 @@
   margin: 0.75rem 0.5rem;
   flex: 1 1 200px;
   background: #fff;
+  position: relative;
 }
 .card-image {
-  max-height: 16rem;
-  padding: 1rem;
+  padding: 3rem 1.5rem 0;
+}
+.card .out-of-stock {
+  position: absolute;
+  background: rgba(179, 176, 176, 0.4);
+  z-index: 1;
+  height: 100%;
+  width: 100%;
+  top: 0;
+}
+.card .out-of-stock .out-of-stock--tag {
+  color: rgb(212, 141, 10);
+  background: rgb(255, 250, 250);
+  font-weight: 500;
+  border-radius: 2px;
+  padding: 0.5rem 1rem;
+  position: absolute;
+  text-align: center;
+  width: 80%;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  z-index: 100;
+  box-shadow: 1px 1px 1px 1px rgba(0, 0, 0, 0.1);
 }
 .product-img {
   width: 100%;
   height: auto;
 }
 .card-image button {
-  background: rgba(255, 255, 255, 0.808);
-  color: gray;
-  top: 0.5rem;
-  right: 0.5rem;
-  font-size: 1.25rem;
-  padding: 0 0.25rem;
+  background: transparent;
+  color: rgba(128, 128, 128, 0.685);
+  border: none;
+  font-size: 1.5rem;
 }
 .card .card-content {
   background: transparent;
+  padding: 0;
 }
-.card .card-content .btn-product {
-  padding: 0.25rem 0.5rem;
+.card .btn-product {
   min-width: 100%;
-  font-weight: 500;
-  color: var(--e-secondary);
+  border: none;
+  border-radius: 0;
+  font-family: inherit;
+  font-size: 1rem;
+  padding: 0.5rem 0;
   background: var(--e-primary);
+  color: var(--e-secondary);
+  font-weight: 500;
 }
 
 /* ----------for small screen------------- */
