--- a/public/index.css
+++ b/public/index.css
@@ -22,6 +22,9 @@ html {
   font-weight: 500;
   text-decoration: underline;
 }
+.cart-count {
+  margin-left: 1vw;
+}
 .modal {
   position: fixed;
   padding-left: 1rem;
