--- a/src/components/css/productsection.css
+++ b/src/components/css/productsection.css
@@ -81,6 +81,7 @@
   margin: 0.75rem 0.5rem;
   flex: 1 1 200px;
   background: #fff;
+  max-width: 30%;
   position: relative;
 }
 .card-image {
@@ -146,6 +147,7 @@
   .product-block {
     margin-left: 0;
   }
+
   .filter-part {
     /* display: none; */
     bottom: 0;
@@ -153,6 +155,10 @@
     width: 100%;
     height: fit-content;
     border-top: 1px solid black;
+  }
+  .card {
+    margin: 0.5rem 0.25rem;
+    max-width: 47.5%;
   }
   .sort-and-search .search input {
     width: 70%;
