--- a/public/index.css
+++ b/public/index.css
@@ -1,5 +1,5 @@
 /* importing uidesign lib */
-@import url("https://deploy-preview-1--roshanuidesign.netlify.app/main.css");
+@import url("https://uidesign-lib.netlify.app/main.css");
 
 /* -font-montserrat- */
 @import url("https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;1,100;1,200;1,300;1,400;1,500&display=swap");
