--- a/src/pages/cart.css
+++ b/src/pages/cart.css
@@ -27,7 +27,19 @@
   max-height: 12rem;
   max-width: 175px;
 }
-
+.horizontal-card__button .remove-btn {
+  border-radius: 0;
+  border: none;
+  padding: 0.5rem;
+  margin: 2px;
+  background: red;
+}
+.horizontal-card__button .wish-btn {
+  background: orange;
+}
+.horizontal-card__button .remove-btn:active {
+  outline: 1px solid rgba(0, 0, 0, 0.5);
+}
 .product-quantity button {
   margin: 0.25rem;
 }
