--- a/src/pages/productpage.css
+++ b/src/pages/productpage.css
@@ -1,10 +1,23 @@
+.back-btn {
+  padding: 0.5rem 1.75rem;
+  font-size: 1rem;
+  margin: 1rem 0 0.5rem 2rem;
+  border-color: var(--e-secondary);
+  background: var(--e-secondary);
+  color: white;
+  font-family: inherit;
+}
 .single-product {
   display: flex;
   justify-content: center;
   align-items: center;
   align-content: center;
-  margin: 7rem 2rem 3rem;
-  border: 1px solid rgba(0, 0, 0, 0.219);
+  margin: 0 2rem 1rem;
+  border-width: 1px;
+  border-style: outset;
+  padding: 0.5rem;
+  border-radius: 0.5rem;
+  box-shadow: 4px 4px 8px 4px rgba(0, 0, 0, 0.2);
 }
 .single-product .section-image {
   padding: 2rem 3rem 4rem 3rem;
@@ -23,15 +36,17 @@
   width: 100%;
   display: flex;
   justify-content: center;
+  z-index: 2;
 }
-.control-btn .btn-product {
-  min-width: 12rem;
+.control-btn button {
   margin: 2px 2px 0 2px;
+  min-width: 49%;
   padding: 0.65rem 0;
   font-size: 1rem;
   font-weight: 500;
   color: black;
   border-radius: 0;
+  height: 3.5rem;
 }
 .control-btn button:active {
   outline: 1px solid rgba(0, 0, 0, 0.5);
@@ -47,7 +62,33 @@
   padding: 0 1rem;
   align-self: baseline;
 }
-
+/* --------out of stock-------- */
+.single-product .out-of-stock {
+  position: absolute;
+  background: rgba(179, 176, 176, 0.4);
+  z-index: 1;
+  height: 100%;
+  width: 100%;
+  top: 0;
+  left: 0;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+.single-product .out-of-stock .out-of-stock--tag {
+  color: rgb(212, 141, 10);
+  background: rgba(255, 250, 250, 0.9);
+  font-weight: 500;
+  border-radius: 2px;
+  height: 4rem;
+  width: 90%;
+  font-size: 2rem;
+  box-shadow: 1px 1px 1px 1px rgba(0, 0, 0, 0.1);
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+/* --------small screen--------- */
 @media screen and (max-width: 750px) {
   .single-product {
     flex-direction: column;
