--- a/src/pages/productsection.css
+++ b/src/pages/productsection.css
@@ -48,6 +48,9 @@
   font-family: inherit;
   background: var(--e-primary);
 }
+.sort-and-search .search button:active {
+  outline: 1px solid rgba(0, 0, 0, 0.5);
+}
 .sort-and-search .sort span {
   font-weight: 500;
   padding: 0 1rem;
@@ -93,20 +96,21 @@
   height: 100%;
   width: 100%;
   top: 0;
+  left: 0;
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
 .card .out-of-stock .out-of-stock--tag {
   color: rgb(212, 141, 10);
   background: rgba(255, 250, 250, 0.9);
   font-weight: 500;
+  width: 90%;
   border-radius: 2px;
-  padding: 0.5rem 1rem;
-  position: absolute;
-  text-align: center;
-  width: 80%;
-  top: 50%;
-  left: 50%;
-  transform: translate(-50%, -50%);
-  z-index: 2;
+  height: 2.75rem;
+  display: flex;
+  justify-content: center;
+  align-items: center;
   box-shadow: 1px 1px 1px 1px rgba(0, 0, 0, 0.1);
 }
 .product-img {
