--- a/public/index.css
+++ b/public/index.css
@@ -29,15 +29,11 @@ main {
 .cart-count {
   margin-left: 1vw;
 }
-.modal {
+.alert {
   position: fixed;
+  font-family: inherit;
   bottom: 4vw;
   right: 2vw;
   transition: 0.5s;
-  /* box-shadow: 0 0 5px 2px #0e56ff31; */
   z-index: 1000;
-  border-radius: 0;
-  padding-left: 1rem;
-  font-size: 1.25rem;
-  background: var(--e-primary);
 }
