--- a/src/components/total.css
+++ b/src/components/total.css
@@ -21,3 +21,14 @@
   font-weight: 500;
   border-top: 1px dashed var(--e-primary);
 }
+.price-detail .price-detail--checkout {
+  font-size: 1rem;
+  padding: 0.75rem 1.5rem;
+  width: 40%;
+  color: white;
+  margin-top: 0.5rem;
+  border-color: var(--e-secondary);
+  background: var(--e-secondary);
+  font-weight: 500;
+  font-family: inherit;
+}
