--- a/src/pages/productpage.css
+++ b/src/pages/productpage.css
@@ -62,6 +62,9 @@
   padding: 0 1rem;
   align-self: baseline;
 }
+.single-product .section-detail * {
+  margin: 1rem 0;
+}
 /* --------out of stock-------- */
 .single-product .out-of-stock {
   position: absolute;
@@ -92,7 +95,6 @@
 @media screen and (max-width: 750px) {
   .single-product {
     flex-direction: column;
-    margin: 7rem 1rem 3rem;
   }
   .single-product .section-image {
     /* padding: 5vw; */
