--- a/src/home/components/Brand.css
+++ b/src/home/components/Brand.css
@@ -7,24 +7,30 @@
   align-items: center;
   flex-wrap: wrap;
   align-content: center;
-  padding: 0 2rem;
   text-transform: uppercase;
   font-size: 1.5rem;
   margin-bottom: 4rem;
 }
 
 .brand .brand__item {
-  padding: 1.75rem;
+  height: 10rem;
+  display: flex;
+  align-items: center;
+  border-radius: 1rem;
+  justify-content: center;
   flex: 1 1 200px;
-  text-align: center;
   margin: 0.55rem;
   border: 1px solid rgba(0, 0, 0, 0.2);
-  border-radius: 0.15rem;
-  box-shadow: 0 0 2px 2px #ffb70e2d;
+  box-shadow: 0 0 4px 2px #ffb70e2d;
+  transition: all 0.3s ease-out;
+  cursor: default;
+}
+
+.brand .brand__item:hover {
+  transform: translateY(-5px);
+  box-shadow: 0 12px 12px rgba(0, 0, 0, 0.11), 0 12px 12px rgba(0, 0, 0, 0.11);
 }
 
 .brand .brand__item:hover {
   background: var(--e-primary);
-  box-shadow: 0 0 8px 2px #ffb70e88;
-  transition: 0.3s;
 }
