--- a/public/index.css
+++ b/public/index.css
@@ -15,10 +15,11 @@ html {
 :root {
   --e-secondary: #677eff;
   --e-primary: #f8dd30;
+  --navbar: #551a8b;
 }
 main {
   margin-top: 4.15rem;
-  min-height: 100vh;
+  min-height: 90vh;
 }
 .section-heading {
   text-align: center;
@@ -28,4 +29,14 @@ main {
 }
 .cart-count {
   margin-left: 1vw;
+}
+
+.error-page {
+  position: fixed;
+  height: 100%;
+  width: 100%;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
 }
