--- a/src/shared/Loader.css
+++ b/src/shared/Loader.css
@@ -5,7 +5,7 @@
   justify-content: center;
 }
 .lds-spinner {
-  color: official;
+  /* color: official; */
   display: inline-block;
   position: relative;
   width: 80px;
@@ -80,5 +80,61 @@
   }
   100% {
     opacity: 0;
+  }
+}
+/* ------------------------- */
+.lds-circle {
+  display: inline-block;
+  transform: translateZ(1px);
+}
+.lds-circle > div {
+  border: 2px solid #677eff;
+  display: inline-block;
+  border-radius: 50%;
+  animation: lds-circle 5s cubic-bezier(0, 0.2, 0.8, 1) infinite;
+}
+.white-circle {
+  display: inline-block;
+  transform: translateZ(1px);
+}
+.white-circle > div {
+  border: 2px solid white;
+  display: inline-block;
+  width: 2em;
+  height: 2em;
+  border-radius: 50%;
+  animation: white-circle 5s cubic-bezier(0, 0.2, 0.8, 1) infinite;
+}
+@keyframes lds-circle {
+  0%,
+  100% {
+    animation-timing-function: cubic-bezier(0.5, 0, 1, 0.5);
+  }
+  0% {
+    transform: rotateY(0deg);
+  }
+  50% {
+    transform: rotateY(1800deg);
+    animation-timing-function: cubic-bezier(0, 0.5, 0.5, 1);
+  }
+  100% {
+    transform: rotateY(3600deg);
+  }
+}
+
+@keyframes white-circle {
+  0%,
+  100% {
+    animation-timing-function: cubic-bezier(0.5, 0, 1, 0.5);
+  }
+  0% {
+    transform: rotateY(0deg);
+  }
+  50% {
+    transform: rotateY(1800deg);
+    animation-timing-function: cubic-bezier(0, 0.5, 0.5, 1);
+  }
+  100% {
+    transform: rotateY(3600deg);
   }
 }
