--- a/src/products/pages/SingleProduct.css
+++ b/src/products/pages/SingleProduct.css
@@ -1,4 +1,4 @@
-.back-btn {
+/* .back-btn {
   padding: 0.5rem 1.75rem;
   font-size: 1rem;
   margin: 1rem 0 0.5rem 2rem;
@@ -6,13 +6,13 @@
   background: var(--e-secondary);
   color: white;
   font-family: inherit;
-}
+} */
 .single-product {
   display: flex;
   justify-content: center;
   align-items: center;
   align-content: center;
-  margin: 0 2rem 1rem;
+  margin: 8rem 2rem 1rem;
   border-width: 1px;
   border-style: outset;
   padding: 0.5rem;
@@ -97,9 +97,9 @@
 }
 /* --------small screen--------- */
 @media screen and (max-width: 750px) {
-  .back-btn {
+  /* .back-btn {
     margin: 0.5rem 0 0.25rem 0.25rem;
-  }
+  } */
   .single-product {
     flex-direction: column;
     margin: 0.25rem;
