style: added css variable(#bb2525)

--- a/public/index.css
+++ b/public/index.css
@@ -16,6 +16,7 @@ html {
   --e-secondary: #677eff;
   --e-primary: #f8dd30;
   --navbar: #551a8b;
+  --filter-btn: #bb2525;
 }
 main {
   margin-top: 4.15rem;
