--- a/src/products/pages/AllProducts.css
+++ b/src/products/pages/AllProducts.css
@@ -8,14 +8,85 @@
 .product-section .product-part {
   border-radius: 0.1rem;
 }
+.product-section .product-part {
+  min-height: 80vh;
+}
 
 /* --------FILTER SECTION--------- */
 .filter-part {
   width: 20vw;
-  z-index: -1;
-  height: 100%;
   background: white;
-  position: fixed;
+  position: absolute;
+}
+.filter-part .filter-content__title {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  border-bottom: 2px inset var(--third);
+  padding: 1rem 0.5rem 1rem 1rem;
+}
+.filter-part .filter-content__title h3 {
+  font-size: 1.25rem;
+  font-weight: 500;
+  margin-bottom: 0;
+}
+.filter-part .filter-content__title button {
+  font-family: inherit;
+  font-size: 1rem;
+  height: 1.75rem;
+  width: 1.75rem;
+  border-radius: 50%;
+  border: 1px solid transparent;
+  cursor: pointer;
+  visibility: hidden;
+}
+.filter-part .filter-content__title button:active {
+  background: var(--e-primary);
+}
+.filter-part .brands {
+  border-bottom: 2px inset var(--third);
+  padding: 0.5rem 1rem;
+}
+.filter-part .brands .brands__item {
+  margin: 0.5rem 0;
+}
+.filter-part .brands .brands__item label {
+  margin-left: 1vw;
+  font-weight: 400;
+  text-transform: capitalize;
+}
+.filter-part .price {
+  display: flex;
+  flex-direction: column;
+  padding: 0.5rem 1rem;
+}
+.filter-part .price-range {
+  position: relative;
+}
+.filter-part .price-range input {
+  width: 100%;
+}
+.filter-part .price .selected-price {
+  position: absolute;
+  left: 0;
+  bottom: -0.75rem;
+  font-size: 0.75rem;
+}
+.filter-part h4 {
+  font-weight: 600;
+  margin-bottom: 0;
+}
+.filter-part .clear-filters {
+  background: var(--filter-btn);
+  border-color: var(--filter-btn);
+  padding: 0.25rem 0.5rem;
+  border-radius: 0.25rem;
+  font-family: inherit;
+  font-size: 0.9rem;
+  margin: 2rem 1rem;
+  color: white;
+  font-weight: 500;
+  cursor: pointer;
 }
 /* ---------------SORTING-SECTION/ SEARCH-------------------- */
 
@@ -36,21 +107,33 @@
 .sort-and-search .search input {
   width: 40%;
   font-family: inherit;
-  height: 2rem;
-  border: 1px solid #ffb70e8c;
-  border-right: none;
+  padding: 0.5rem;
+  border-radius: 0.25rem;
+  background: var(--third);
+  border: 1.5px solid transparent;
+  outline-color: var(--e-secondary);
 }
-.sort-and-search .search button {
-  height: 2rem;
-  font-size: 0.9rem;
-  border-color: var(--e-primary);
-  padding: 0 1rem;
-  font-family: inherit;
-  background: var(--e-primary);
+.sort-and-search .sort {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
 }
-.sort-and-search .sort span {
-  font-weight: 500;
+.sort-and-search .sort .sort-price {
+  display: flex;
+  justify-content: flex-end;
+  align-items: center;
+  padding: 0;
+}
+.sort-and-search .sort .sort-price h4 {
+  font-weight: 600;
   padding: 0 1rem;
+  margin-bottom: 0;
+}
+.sort-and-search .sort .sort-option {
+  font-weight: 600;
+  margin-right: 0.5rem;
+  margin-bottom: 0;
+  visibility: hidden;
 }
 .sort-and-search .sort select {
   font-size: 0.9rem;
@@ -65,7 +148,8 @@
 .product-block {
   display: flex;
   flex-direction: column;
-  margin-left: 20.5vw;
+  margin-left: 21%;
+  width: 80%;
 }
 .product-part {
   padding-top: 3vw;
@@ -150,15 +234,31 @@
   }
   .product-block {
     margin-left: 0;
-  }
-
-  .filter-part {
-    /* display: none; */
-    bottom: 0;
-    z-index: 15;
+    transition: all 0.2s linear;
     width: 100%;
-    height: fit-content;
-    border-top: 1px solid black;
+  }
+  .filter-part {
+    width: 100%;
+    height: 100%;
+    background: rgba(255, 255, 255, 0.2);
+  }
+  .filter-part .filter-content {
+    background: var(--e-primary);
+    width: 50%;
+    height: 100%;
+    box-shadow: 0 2px 4px 4px rgba(0, 0, 0, 0.1);
+  }
+  .filter-part .filter-content__title button {
+    visibility: visible;
+  }
+  .filter-part.hide {
+    transform: translateX(-120%);
+    transition: all 0.2s linear;
+  }
+  .filter-part.show {
+    transform: translateX(0);
+    z-index: 10;
+    transition: all 0.2s linear;
   }
   .card {
     margin: 0.5rem 0.25rem;
@@ -166,5 +266,8 @@
   }
   .sort-and-search .search input {
     width: 70%;
+  }
+  .sort-and-search .sort .sort-option {
+    visibility: visible;
   }
 }
