--- a/src/cart/pages/Checkout.css
+++ b/src/cart/pages/Checkout.css
@@ -38,15 +38,12 @@
   
   .result-message {
     line-height: 22px;
-    font-size: 16px;
     color: rgb(89, 111, 214);
     font-weight: 600;
+    text-align: center;
   }
   
   
-  .hidden {
-    display: none;
-  }
   
   #card-error {
     color: rgb(105, 115, 134);
